# quant

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCS.md  LICENSE  MODERN_UI_SYSTEM.md  Makefile  PRODUCTION_AUDIT_REPORT.md  README.md  SECURITY.md  SETUP.md  coverage.xml  pyproject.toml  requirements.txt  ruff_report.json  rxconfig.py
.github/ISSUE_TEMPLATE/: bug_report.md
components/: __init__.py  layout.py  sidebar.py
components/ui/: __init__.py  cards.py  charts.py  forms.py  layout.py  navigation.py  theme.py
pages/: __init__.py  backtest.py  index.py  portfolio.py  risk.py  strategy.py
quant/: config.py  quant.py  state.py
quant/backtesting/: __init__.py  engine.py  metrics.py
quant/data/: __init__.py  data_manager.py  database.py
quant/indicators/: __init__.py  base.py  momentum.py  trend.py  volatility.py  volume.py
quant/portfolio/: __init__.py  optimizer.py  portfolio.py  rebalancer.py
quant/risk/: __init__.py  metrics.py  var.py
quant/strategies/: __init__.py  base.py  breakout.py  mean_reversion.py  momentum_strategy.py
quant/utils/: __init__.py  logger.py  production.py
tests/: __init__.py  conftest.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_database.py  test_indicators.py  test_portfolio.py  test_portfolio_optimizer.py  test_risk_metrics.py  test_strategies.py  test_var.py
